--- a/translations/miradi_id.po
+++ b/translations/miradi_id.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-04 08:03-0500\n"
+"POT-Creation-Date: 2010-08-04 08:13-0500\n"
 "PO-Revision-Date: 2009-12-17 09:22-0500\n"
 "Last-Translator: Lucy Tickell <ltickell@globalarena.com>\n"
 "Language-Team: Indonesian\n"
@@ -1260,11 +1260,11 @@ msgid "Action|Manage|Create Audience"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionCreateCategoryOne.java:36
-msgid "Action|Manage|Create Category One"
+msgid "Action|Manage|Create Category #1 Item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionCreateCategoryTwo.java:36
-msgid "Action|Manage|Create Category Two"
+msgid "Action|Manage|Create Category #2 Item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionCreateChildTask.java:40
@@ -1359,11 +1359,11 @@ msgid "Action|Manage|Delete Activity"
 msgstr "Hapus Kegiatan "
 
 #: Miradi/source/org/miradi/actions/ActionDeleteCategoryOne.java:36
-msgid "Action|Manage|Delete Category One"
+msgid "Action|Manage|Delete Category #1 Item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionDeleteCategoryTwo.java:36
-msgid "Action|Manage|Delete Category Two"
+msgid "Action|Manage|Delete Category #2 Item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionDeleteFundingSource.java:35
@@ -2382,6 +2382,14 @@ msgstr "Tidak bisa menulis tindih proyek yang sedang dibuka "
 msgid "Cannot save a project back to its existing name"
 msgstr "Tidak dapat menyimpan proyek dengan namanya saat ini "
 
+#: Miradi/source/org/miradi/views/workplan/BudgetCategoryOneManagementConfiguration.java:58
+msgid "Category #1"
+msgstr ""
+
+#: Miradi/source/org/miradi/views/workplan/BudgetCategoryTwoManagementConfiguration.java:49
+msgid "Category #2"
+msgstr ""
+
 #: Miradi/source/org/miradi/questions/ProtectedAreaCategoryQuestion.java:37
 msgid "Category II: National park"
 msgstr "Kategori II: Taman Nasional"
@@ -2403,13 +2411,11 @@ msgid "Category Ib: Wilderness area"
 msgstr "Kategori Ib: Kawasan Liar"
 
 #: Miradi/source/org/miradi/views/workplan/doers/DeleteCategoryOneDoer.java:34
-#: Miradi/source/org/miradi/views/workplan/BudgetCategoryOneManagementConfiguration.java:58
 #: Miradi/source/org/miradi/dialogs/planning/propertiesPanel/AbstractSummaryTableModel.java:58
 msgid "Category One"
 msgstr ""
 
 #: Miradi/source/org/miradi/views/workplan/doers/DeleteCategoryTwoDoer.java:34
-#: Miradi/source/org/miradi/views/workplan/BudgetCategoryTwoManagementConfiguration.java:49
 #: Miradi/source/org/miradi/dialogs/planning/propertiesPanel/AbstractSummaryTableModel.java:61
 msgid "Category Two"
 msgstr ""
@@ -6129,14 +6135,6 @@ msgstr ""
 msgid "TT|Create a Bend Point"
 msgstr "Buat satu Titik Belok "
 
-#: Miradi/source/org/miradi/actions/ActionCreateCategoryOne.java:42
-msgid "TT|Create a Category One"
-msgstr ""
-
-#: Miradi/source/org/miradi/actions/ActionCreateCategoryTwo.java:42
-msgid "TT|Create a Category Two"
-msgstr ""
-
 #: Miradi/source/org/miradi/actions/ActionCreateSameLevelTask.java:42
 msgid "TT|Create a Create Task at Same Level"
 msgstr ""
@@ -6226,6 +6224,14 @@ msgstr "Buat Laporan Kemajuan baru "
 #: Miradi/source/org/miradi/actions/ActionCreatePlanningViewEmptyConfiguration.java:40
 msgid "TT|Create a new blank Custom Planning View"
 msgstr "Buat baru Tampilan Perencanaan Khusus yang kosong "
+
+#: Miradi/source/org/miradi/actions/ActionCreateCategoryOne.java:42
+msgid "TT|Create a new item of type Budget Category #1"
+msgstr ""
+
+#: Miradi/source/org/miradi/actions/ActionCreateCategoryTwo.java:42
+msgid "TT|Create a new item of type Budget Category #2"
+msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionPlanningCreationMenu.java:39
 msgid "TT|Create a new object"
@@ -6374,11 +6380,11 @@ msgid "TT|Delete the selected Activity"
 msgstr "Hapus Kegiatan terpilih "
 
 #: Miradi/source/org/miradi/actions/ActionDeleteCategoryOne.java:42
-msgid "TT|Delete the selected Category One"
+msgid "TT|Delete the selected Budget Category #1 item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionDeleteCategoryTwo.java:42
-msgid "TT|Delete the selected Category Two"
+msgid "TT|Delete the selected Budget Category #2 item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionDeletePlanningViewConfiguration.java:40
@@ -9550,25 +9556,25 @@ msgstr ""
 msgid "FieldLabel|55.Summary|Audience Summary"
 msgstr ""
 
-msgid "FieldLabel|56.CategoryOne|Budget Category One"
+msgid "FieldLabel|56.CategoryOne|Budget Category #1"
 msgstr ""
 
-msgid "FieldLabel|56.Label|Category One Name"
+msgid "FieldLabel|56.Label|Name"
 msgstr ""
 
-msgid "FieldLabel|56.Code|Source Code"
+msgid "FieldLabel|56.Code|ID"
 msgstr ""
 
 msgid "FieldLabel|56.Comments|Comments"
 msgstr ""
 
-msgid "FieldLabel|57.CategoryTwo|Budget Category Two"
+msgid "FieldLabel|57.CategoryTwo|Budget Category #2"
 msgstr ""
 
-msgid "FieldLabel|57.Label|Category Two Name"
+msgid "FieldLabel|57.Label|Name"
 msgstr ""
 
-msgid "FieldLabel|57.Code|Source Code"
+msgid "FieldLabel|57.Code|ID"
 msgstr ""
 
 msgid "FieldLabel|57.Comments|Comments"
