--- a/translations/miradi_zh.po
+++ b/translations/miradi_zh.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-04 08:03-0500\n"
+"POT-Creation-Date: 2010-08-04 08:13-0500\n"
 "PO-Revision-Date: 2009-09-16 11:23-0800\n"
 "Last-Translator: ab\n"
 "Language-Team: Chinese\n"
@@ -1177,11 +1177,11 @@ msgid "Action|Manage|Create Audience"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionCreateCategoryOne.java:36
-msgid "Action|Manage|Create Category One"
+msgid "Action|Manage|Create Category #1 Item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionCreateCategoryTwo.java:36
-msgid "Action|Manage|Create Category Two"
+msgid "Action|Manage|Create Category #2 Item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionCreateChildTask.java:40
@@ -1276,11 +1276,11 @@ msgid "Action|Manage|Delete Activity"
 msgstr "删除活动 \t\t"
 
 #: Miradi/source/org/miradi/actions/ActionDeleteCategoryOne.java:36
-msgid "Action|Manage|Delete Category One"
+msgid "Action|Manage|Delete Category #1 Item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionDeleteCategoryTwo.java:36
-msgid "Action|Manage|Delete Category Two"
+msgid "Action|Manage|Delete Category #2 Item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionDeleteFundingSource.java:35
@@ -2278,6 +2278,14 @@ msgstr "不能重写打开的项目 \t\t"
 msgid "Cannot save a project back to its existing name"
 msgstr ""
 
+#: Miradi/source/org/miradi/views/workplan/BudgetCategoryOneManagementConfiguration.java:58
+msgid "Category #1"
+msgstr ""
+
+#: Miradi/source/org/miradi/views/workplan/BudgetCategoryTwoManagementConfiguration.java:49
+msgid "Category #2"
+msgstr ""
+
 #: Miradi/source/org/miradi/questions/ProtectedAreaCategoryQuestion.java:37
 msgid "Category II: National park"
 msgstr "种类II：国家公园"
@@ -2299,13 +2307,11 @@ msgid "Category Ib: Wilderness area"
 msgstr "种类Ib：野生地区"
 
 #: Miradi/source/org/miradi/views/workplan/doers/DeleteCategoryOneDoer.java:34
-#: Miradi/source/org/miradi/views/workplan/BudgetCategoryOneManagementConfiguration.java:58
 #: Miradi/source/org/miradi/dialogs/planning/propertiesPanel/AbstractSummaryTableModel.java:58
 msgid "Category One"
 msgstr ""
 
 #: Miradi/source/org/miradi/views/workplan/doers/DeleteCategoryTwoDoer.java:34
-#: Miradi/source/org/miradi/views/workplan/BudgetCategoryTwoManagementConfiguration.java:49
 #: Miradi/source/org/miradi/dialogs/planning/propertiesPanel/AbstractSummaryTableModel.java:61
 msgid "Category Two"
 msgstr ""
@@ -5906,14 +5912,6 @@ msgstr ""
 msgid "TT|Create a Bend Point"
 msgstr "创建一个曲点 \t\t"
 
-#: Miradi/source/org/miradi/actions/ActionCreateCategoryOne.java:42
-msgid "TT|Create a Category One"
-msgstr ""
-
-#: Miradi/source/org/miradi/actions/ActionCreateCategoryTwo.java:42
-msgid "TT|Create a Category Two"
-msgstr ""
-
 #: Miradi/source/org/miradi/actions/ActionCreateSameLevelTask.java:42
 msgid "TT|Create a Create Task at Same Level"
 msgstr ""
@@ -6002,6 +6000,14 @@ msgstr "创建新的进展报告 \t\t"
 
 #: Miradi/source/org/miradi/actions/ActionCreatePlanningViewEmptyConfiguration.java:40
 msgid "TT|Create a new blank Custom Planning View"
+msgstr ""
+
+#: Miradi/source/org/miradi/actions/ActionCreateCategoryOne.java:42
+msgid "TT|Create a new item of type Budget Category #1"
+msgstr ""
+
+#: Miradi/source/org/miradi/actions/ActionCreateCategoryTwo.java:42
+msgid "TT|Create a new item of type Budget Category #2"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionPlanningCreationMenu.java:39
@@ -6151,11 +6157,11 @@ msgid "TT|Delete the selected Activity"
 msgstr "删除选定的活动 \t\t"
 
 #: Miradi/source/org/miradi/actions/ActionDeleteCategoryOne.java:42
-msgid "TT|Delete the selected Category One"
+msgid "TT|Delete the selected Budget Category #1 item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionDeleteCategoryTwo.java:42
-msgid "TT|Delete the selected Category Two"
+msgid "TT|Delete the selected Budget Category #2 item"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionDeletePlanningViewConfiguration.java:40
@@ -9262,25 +9268,25 @@ msgstr ""
 msgid "FieldLabel|55.Summary|Audience Summary"
 msgstr ""
 
-msgid "FieldLabel|56.CategoryOne|Budget Category One"
+msgid "FieldLabel|56.CategoryOne|Budget Category #1"
 msgstr ""
 
-msgid "FieldLabel|56.Label|Category One Name"
+msgid "FieldLabel|56.Label|Name"
 msgstr ""
 
-msgid "FieldLabel|56.Code|Source Code"
+msgid "FieldLabel|56.Code|ID"
 msgstr ""
 
 msgid "FieldLabel|56.Comments|Comments"
 msgstr ""
 
-msgid "FieldLabel|57.CategoryTwo|Budget Category Two"
+msgid "FieldLabel|57.CategoryTwo|Budget Category #2"
 msgstr ""
 
-msgid "FieldLabel|57.Label|Category Two Name"
+msgid "FieldLabel|57.Label|Name"
 msgstr ""
 
-msgid "FieldLabel|57.Code|Source Code"
+msgid "FieldLabel|57.Code|ID"
 msgstr ""
 
 msgid "FieldLabel|57.Comments|Comments"
