--- a/translations/miradi_id.po
+++ b/translations/miradi_id.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-04 08:25-0500\n"
+"POT-Creation-Date: 2010-08-04 08:38-0500\n"
 "PO-Revision-Date: 2009-12-17 09:22-0500\n"
 "Last-Translator: Lucy Tickell <ltickell@globalarena.com>\n"
 "Language-Team: Indonesian\n"
@@ -13398,7 +13398,13 @@ msgid ""
 "for the activities/methods and tasks that you need to undertake to implement "
 "your strategic and monitoring plans.</p><p>As a general rule, you should "
 "have a detailed work plan for the coming year and a rough plan for the years "
-"after that.  </p>"
+"after that.  </p><p class='hint'><b>Hint:</b>The <strong>Analysis</strong> "
+"tab supports the creation of custom views of your work plan data by "
+"specifying how you would like to group the work units and expenses.  For "
+"example, it is possible to create a report showing salary expenses broken "
+"down by funding source and then accounting code.  <p class='hint'><b>Hint:</"
+"b>There are two new additional categories that can be used to classify work "
+"units and expenses in more detail."
 msgstr ""
 
 msgid ""
