--- a/translations/miradi_mn.po
+++ b/translations/miradi_mn.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: j 2ee-hudson\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-04 09:02-0500\n"
+"POT-Creation-Date: 2010-08-04 09:08-0500\n"
 "PO-Revision-Date: 2010-06-07 17:23-0500\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -13596,55 +13596,40 @@ msgid ""
 "other disciplines as well,   such as development projects, public health "
 "projects, or many others.&nbsp; If   you are interested in helping us to "
 "develop a version for your field, please   contact us.</LI></"
-"UL><H3><HR>Summary View</H3><UL><LI><STRONG>Customizable Tabs - </STRONG>The "
-"ability to create a custom tab that contains only the data fields that your "
-"project or organization wants to track.</LI>  <LI><STRONG>Summary Dashboard "
-"- </STRONG>The ability to create a dashboard for your project showing the "
-"status of key fields and indicators.</LI>   </UL><H3><HR>Diagram View</"
-"H3><UL>  <LI><STRONG>Diagram Slide Show - </STRONG>The ability to hide or "
-"display specific combinations of factors and then \"snap\" images that can "
-"be used to develop an animated presentation of your model.</LI>  "
-"<LI><STRONG>Support for Human Welfare Targets - </STRONG>The ability to "
-"display targets related to human (as opposed to natural world) welfare.</"
-"LI>   </UL><H3><HR>Threat Ratings View</H3><UL>  <LI><STRONG>Improved "
-"Interface for Stress-Based Threat Ratings - </strong>Improved user interface "
-"for doing TNC-style Stress and Source of Stress Ratings.</li></"
-"UL><H3><HR>Planning View</H3><UL><LI><STRONG>Continued Improvement of User "
-"Interface</STRONG>&nbsp;- Enhancements to the presentation of information in "
-"these screens.</LI>   <LI><STRONG>Analytical Tools</STRONG> - Tools to help "
-"conduct basic analyses   of monitoring data.</LI>  <LI><STRONG>Reports by "
-"Accounting Code and Donor</STRONG> - The ability to develop reports showing "
-"planned expenditures by donor or by accounting code.</LI>  "
-"<LI><STRONG>Tracking of Actual Expenses</STRONG> -&nbsp;Tools to enter "
-"actual   expenditures and to match these up to budget line items and report "
-"on them by   programmatic objectives and activities, by accounting codes, or "
-"by funding   sources, using a Quicken or Quickbooks style interface.</LI></"
-"UL><H3><HR>Reports</H3><UL>  <LI><STRONG>Enhanced Import and Export</STRONG> "
-"- Enahanced ability to export information in various formats.   "
-"<LI><STRONG>Custom Report Generation</STRONG>&nbsp;- The ability to   "
-"automatically&nbsp;generate documents that contain the core of material "
-"needed   for reports to key conservation donors and organizations.   "
-"<LI><STRONG>Uploads to Databases of Conservation Practice </STRONG>- The   "
-"ability, if you so desire,&nbsp;to upload some or all of your project   "
-"information to&nbsp;standard databases of conservation practice that can "
-"be   accessed by practitioners&nbsp;around the&nbsp;world.&nbsp;</LI></"
-"UL><H3><HR>Schedule (New View)</H3><UL>  <LI><STRONG>Project Calendar</"
-"STRONG> - A calendar showing activities/tasks   and major events&nbsp;on a "
-"given day, week, or month either for specific team   members, or for the "
-"project as a whole.   <LI><STRONG>Gantt Chart</STRONG> - The ability to "
-"create a chart showing how   different activities/methods and tasks link to "
-"one another and overlap among   human and other resources.</LI></"
-"UL><H3><HR>Map (New View)</H3><UL>  <LI><STRONG>Basic Mapping - </"
-"STRONG>Tools to obtain a base map of your   project site, outline the scope "
-"of your project area, and show targets,   threats, and other objects on the "
-"map as points or polygons.   <LI><STRONG>Basic Spatial Analyses</STRONG> - "
-"Functions to analyze data   spatially&nbsp;(union or intersection of "
-"polygons, etc).   <LI><STRONG>Analyze Spatial Variation in Key Factors </"
-"STRONG>- Tools to how   how target or threat&nbsp;status varies over your "
-"project site,   depict&nbsp;the spatial \"footprint\" of a given strategy or "
-"objective, and   prioritize strategies and actions or monitoring work&nbsp;"
-"in different   sections of your project area.   <LI><STRONG>Share&nbsp;Data "
-"- </STRONG>Upload project information to spatially   referenced databases. </"
+"UL><H3><HR>Summary View</H3>  <LI><STRONG>Summary Dashboard - </STRONG>The "
+"ability to create a dashboard for your project showing the status of key "
+"fields and indicators.</LI>   </UL><H3><HR>Diagram View</H3><UL>  "
+"<LI><STRONG>Diagram Slide Show - </STRONG>The ability to hide or display "
+"specific combinations of factors and then \"snap\" images that can be used "
+"to develop an animated presentation of your model.</LI>  </UL><H3><HR>Work "
+"Planning View</H3><UL><LI><STRONG>Continued Improvement of User Interface</"
+"STRONG>&nbsp;- Enhancements to the presentation of information in these "
+"screens.</LI>   <LI><STRONG>Tracking of Actual Expenses</STRONG> -&nbsp;"
+"Tools to enter actual   expenditures and to match these up to budget line "
+"items and report on them by   programmatic objectives and activities, by "
+"accounting codes, or by funding   sources, using a Quicken or Quickbooks "
+"style interface.</LI>  <LI><STRONG>Project Calendar</STRONG> - A calendar "
+"showing activities/tasks   and major events&nbsp;on a given day, week, or "
+"month either for specific team   members, or for the project as a whole.   "
+"<LI><STRONG>Gantt Chart</STRONG> - The ability to create a chart showing "
+"how   different activities/methods and tasks link to one another and overlap "
+"among   human and other resources.</LI></UL><H3><HR>Reports</H3><UL>  "
+"<LI><STRONG>Enhanced Import and Export</STRONG> - Enahanced ability to "
+"export information in various formats.   <LI><STRONG>Custom Report "
+"Generation</STRONG>&nbsp;- The ability to   automatically&nbsp;generate "
+"documents that contain the core of material needed   for reports to key "
+"conservation donors and organizations.   </LI></UL><H3><HR>Map (New View)</"
+"H3><UL>  <LI><STRONG>Basic Mapping - </STRONG>Tools to obtain a base map of "
+"your   project site, outline the scope of your project area, and show "
+"targets,   threats, and other objects on the map as points or polygons.   "
+"<LI><STRONG>Basic Spatial Analyses</STRONG> - Functions to analyze data   "
+"spatially&nbsp;(union or intersection of polygons, etc).   "
+"<LI><STRONG>Analyze Spatial Variation in Key Factors </STRONG>- Tools to "
+"how   how target or threat&nbsp;status varies over your project site,   "
+"depict&nbsp;the spatial \"footprint\" of a given strategy or objective, "
+"and   prioritize strategies and actions or monitoring work&nbsp;in "
+"different   sections of your project area.   <LI><STRONG>Share&nbsp;Data - </"
+"STRONG>Upload project information to spatially   referenced databases. </"
 "LI></UL><H3><HR>Library (New View)</H3><UL>  <LI><STRONG>Store&nbsp;and "
 "Manage Project&nbsp;Documents</STRONG> - Store and   manage images, "
 "documents, data sets, and other files related to your   project.</LI></"
