Hudson build: hudson-Miradi-5895; 2010-08-04_09-58-00

--- a/translations/miradi_it.po
+++ b/translations/miradi_it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Miradi-3.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-04 09:08-0500\n"
+"POT-Creation-Date: 2010-08-04 10:00-0500\n"
 "PO-Revision-Date: 2010-05-12 21:01-0500\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -10075,9 +10075,11 @@ msgid ""
 "classification of direct threats can be found at:</P><BLOCKQUOTE dir=ltr "
 "style=\"MARGIN-RIGHT: 0px\">  <P>IUCN - CMP. 2006. <EM>Unified "
 "Classification of Direct Threats. Version   1.0.<BR></EM></FONT>&nbsp;&nbsp;"
-"&nbsp;&nbsp; <A   href=\"http://conservationmeasures.org/CMP/IUCN/Site_Page."
-"cfm\"><U><FONT   color=#0000ff>http://conservationmeasures.org/CMP/IUCN/"
-"Site_Page.cfm</U></FONT></A></P></BLOCKQUOTE></BODY></HTML>"
+"&nbsp;&nbsp; <A   href=\"http://www.conservationmeasures.org/initiatives/"
+"threats-actions-taxonomies/threats-taxonomy\"><U><FONT   "
+"color=#0000ff>http://www.conservationmeasures.org/initiatives/threats-"
+"actions-taxonomies/threats-taxonomy</U></FONT></A></P></BLOCKQUOTE></BODY></"
+"HTML>"
 msgstr ""
 
 msgid ""
@@ -12156,9 +12158,9 @@ msgid ""
 "factors</a> (also called indirect threats, opportunities, or root causes) "
 "that lead to the direct threats. In this step, you should only consider "
 "direct threats.</p><p class='hint'><strong>Hint:</strong> You may want to "
-"browse the <a href=\"http://conservationmeasures.org/CMP/IUCN/Site_Page.cfm"
-"\">Classification of Direct Threats</a> for ideas of direct threats.</p></"
-"div>"
+"browse the <a href=\"http://www.conservationmeasures.org/initiatives/threats-"
+"actions-taxonomies/threats-taxonomy\">Classification of Direct Threats</a> "
+"for ideas of direct threats.</p></div>"
 msgstr ""
 
 msgid ""
