Hudson build: hudson-Miradi-5897; 2010-08-05_09-34-00

--- a/translations/miradi_uk.po
+++ b/translations/miradi_uk.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: j 2ee-hudson\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-04 10:00-0500\n"
+"POT-Creation-Date: 2010-08-05 09:35-0500\n"
 "PO-Revision-Date: 2010-05-12 13:30-0500\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -11300,20 +11300,18 @@ msgid ""
 "class='definition'>methods</a> and <a href='Definition:Task' "
 "class='definition'>tasks</a>that you need to undertake to implement your "
 "strategic and monitoring plans.<p>The work plan view also enables you to "
-"develop a <a href='Definition:Budget' class='definition'>budget</a> for your "
-"project (in the future, it will also enable you to manage <a "
-"href='Definition:ActualExpenditures' class='definition'>actual&nbsp;"
-"expenditures</a>). The budget shows the planned costs and funding sources "
-"for the activities/methods and tasks that you need to undertake to implement "
-"your strategic and monitoring plans.</p><p>As a general rule, you should "
-"have a detailed work plan for the coming year and a rough plan for the years "
-"after that.  </p><p class='hint'><b>Hint:</b>The <strong>Analysis</strong> "
-"tab supports the creation of custom views of your work plan data by "
-"specifying how you would like to group the work units and expenses.  For "
-"example, it is possible to create a report showing salary expenses broken "
-"down by funding source and then accounting code.  <p class='hint'><b>Hint:</"
-"b>There are two new additional categories that can be used to classify work "
-"units and expenses in more detail."
+"develop a budget for your project(in the future, it will also enable you to "
+"manage actual expenditures).The budget shows the planned costs for the "
+"activities/methods and tasksthat you need to undertake to implement your "
+"strategic and monitoringplans. These work units and expenses can be "
+"categorized by fundingsources, accounting codes, and two additional user-"
+"defined budgetcategories. </p><p>As a general rule, you should have a "
+"detailed work plan for the coming year and a rough plan for the years after "
+"that.  </p><p>The <strong>Analysis</strong> tab supports the creation of "
+"custom views of your work plan data by specifying how you would like to "
+"group the work units and expenses.  For example, it is possible to create a "
+"report showing salary expenses broken down by funding source and then "
+"accounting code.  "
 msgstr ""
 
 msgid ""
