Hudson build: hudson-Miradi-5899; 2010-08-05_11-03-59

--- a/translations/miradi_uk.po
+++ b/translations/miradi_uk.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: j 2ee-hudson\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-05 09:35-0500\n"
+"POT-Creation-Date: 2010-08-05 11:05-0500\n"
 "PO-Revision-Date: 2010-05-12 13:30-0500\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -11351,10 +11351,18 @@ msgid ""
 "Based Costing (ABC) and is essential to improve management effectiveness.</"
 "li> <li><strong>By Funding Source -</strong> Reports of money spent by each "
 "funding source.  These are useful for managing your cash-flow and for "
-"reporting to donors.</li>          <li><strong>Against Budgets -</strong> "
-"Reports of money spent against the projections in your budgets. These are "
-"useful for managing your cash-flow and for improving your forecasting "
-"ability over time.</li></ul></div>"
+"reporting to donors.</li>  <li><strong>By Other Miscelaneous Categories -</"
+"strong> Many organizations have more complex accounting systems.  Miradi "
+"includes 2 additional budgeting categories that can be used to further "
+"clasify expenses.<li><strong>Against Budgets -</strong> Reports of money "
+"spent against the projections in your budgets. These are useful for managing "
+"your cash-flow and for improving your forecasting ability over time.</li></"
+"ul><p><strong>The Analysis Tab:</strong>  This tab allows for the creation "
+"of more complex views of the budget data by grouping the expenses at various "
+"category levels.  For instance, view which resources are associated to a "
+"given funding source, or see how expenses break down amoung your accounting "
+"codes per funding source.  These reports can then be exported as RTF or Tab "
+"delimited files for use in other accounting systems.</div>"
 msgstr ""
 
 msgid ""
@@ -11546,16 +11554,20 @@ msgid ""
 "BudgetWizardReconcileActualExpendituresStepLeft.html|Future versions of "
 "Miradi will allow you to generate reports on <a href='Definition:"
 "ActualExpenditures' class='definition'>actual expenditures</a> across "
-"different time periods by accounting code, activity, funding source, and "
-"against budgets.<p>Currently, it is possible to review all work and expenses "
-"that have been assigned to a given Project Resource, Accounting Code or "
-"Funding Source for a given time period.  This should aid in your planning by "
-"helping to determine your Resource and Funding needs per fiscal quarter or "
-"year.</p><p class='hint'><b>Hint:</b>You can create individual work plans by "
-"using the <code class='toolbarbutton'>&lt;Filter&nbsp;by&nbsp;Resource...&gt;"
-"</code> button and selecting the resources you want to view.  This will "
-"update the Work Plan to only show work days and budget totals for the "
-"selected resource(s).</p>"
+"different time periods by accounting code, activity, funding source, the 2 "
+"additional categories and against budgets.<p>The Analysis tab allows for the "
+"review all work and expenses that have been assigned to a given Project "
+"Resource, Accounting Code, Funding Source and the two additional categories "
+"for a given time period.  This should aid in your planning by helping to "
+"determine your Resource and Funding needs per fiscal quarter or year.  It "
+"can also help you analyze how your projected project costs are being applied "
+"to help refine per strategy implementation costs or to identify what types "
+"of activities account for the largest expenses.</p><p class='hint'><b>Hint:</"
+"b>You can create individual work plans by using the <code "
+"class='toolbarbutton'>&lt;Filter&nbsp;by&nbsp;Resource...&gt;</code> button "
+"and selecting the resources you want to view.  This will update the Work "
+"Plan to only show work days and budget totals for the selected resource(s).</"
+"p>"
 msgstr ""
 
 msgid ""
