Hudson build: hudson-Miradi-5909; 2010-08-05_17-19-00

--- a/translations/miradi_it.po
+++ b/translations/miradi_it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Miradi-3.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-05 16:43-0500\n"
+"POT-Creation-Date: 2010-08-05 17:24-0500\n"
 "PO-Revision-Date: 2010-05-12 21:01-0500\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -10248,18 +10248,18 @@ msgid ""
 "BLOCKQUOTE><br><HR><H3 dir=ltr>WWF</H3><BLOCKQUOTE dir=ltr style=\"MARGIN-"
 "RIGHT: 0px\">  <P dir=ltr>WWF. 2006. <EM>WWF Standards of Project and "
 "Programme   Management.<BR></EM>&nbsp;&nbsp;&nbsp;&nbsp; <A   href=\"http://"
-"www.panda.org/standards/full\">http://www.panda.org/standards/full</A></P>  "
-"<P dir=ltr>Extensive guidance materials are also available   at:<BR>&nbsp;"
-"&nbsp;&nbsp;&nbsp; <A   href=\"http://www.panda.org/standards\">www.panda."
-"org/standards</A> </P></BLOCKQUOTE><br><HR><H3 dir=ltr>Foundations of "
-"Success (FOS)</H3><BLOCKQUOTE dir=ltr style=\"MARGIN-RIGHT: 0px\">  "
-"<P>Margoluis, R., and N. Salafsky. 1998. <EM>Measures of Success: "
-"Designing,   Managing, and Monitoring Conservation and Development Projects. "
-"</EM>Island   Press, Washington, DC.<BR>&nbsp;&nbsp;&nbsp;&nbsp; </FONT><A   "
-"href=\"http://islandpress.org\"><U><FONT   color=#0000ff>http://islandpress."
-"org</U></FONT></A></P>  <P>Extensive guidance materials are available in the "
-"resources&nbsp;section   of:<BR>&nbsp;&nbsp;&nbsp;&nbsp; <A   href=\"http://"
-"fosonline.org\">http://fosonline.org</A></P></BLOCKQUOTE>"
+"www.panda.org/standards/complete\">http://www.panda.org/standards/complete</"
+"A></P>  <P dir=ltr>Extensive guidance materials are also available   at:"
+"<BR>&nbsp;&nbsp;&nbsp;&nbsp; <A   href=\"http://www.panda.org/standards"
+"\">www.panda.org/standards</A> </P></BLOCKQUOTE><br><HR><H3 "
+"dir=ltr>Foundations of Success (FOS)</H3><BLOCKQUOTE dir=ltr style=\"MARGIN-"
+"RIGHT: 0px\">  <P>Margoluis, R., and N. Salafsky. 1998. <EM>Measures of "
+"Success: Designing,   Managing, and Monitoring Conservation and Development "
+"Projects. </EM>Island   Press, Washington, DC.<BR>&nbsp;&nbsp;&nbsp;&nbsp; </"
+"FONT><A   href=\"http://islandpress.org\"><U><FONT   color=#0000ff>http://"
+"islandpress.org</U></FONT></A></P>  <P>Extensive guidance materials are "
+"available in the resources&nbsp;section   of:<BR>&nbsp;&nbsp;&nbsp;&nbsp; "
+"<A   href=\"http://fosonline.org\">http://fosonline.org</A></P></BLOCKQUOTE>"
 msgstr ""
 
 msgid ""
